Protect against leaked objects that have close hooks by not attempting another GC if we didn't actually call any close hooks. bug 340889, r=igor